removed useless comment and added autofocus to todo item input

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
       </div>
     </div>
     <div class="row add_todo_item">
-      <input type="text" placeholder="add todo item" spellcheck="false">
+      <input type="text" placeholder="add todo item" spellcheck="false" autofocus="true">
       <button class="add_todo_item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 10h-10v-10h-4v10h-10v4h10v10h4v-10h10z"/></svg></button>
     </div>
 
-    <!-- example todo items -->
     <div class="todo_item_list">
-      
+
     </div>
     <div class="row clear_meter">
       <button>clear todo meter</button>
